- Added "Sustainable, maintainable, and engaging" section to website - Added new "Checklist" component

--- a/style/output.css
+++ b/style/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.1 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -31,6 +31,7 @@
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
+6. Use the user's configured `sans` font-variation-settings by default.
 */
 
 html {
@@ -47,6 +48,8 @@ html {
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
+  font-variation-settings: normal;
+  /* 6 */
 }
 
 /*
@@ -580,6 +583,10 @@ video {
   margin-bottom: auto;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -590,6 +597,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-4 {
@@ -612,14 +623,6 @@ video {
   display: flex;
 }
 
-.inline-flex {
-  display: inline-flex;
-}
-
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
@@ -630,6 +633,10 @@ video {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-3 {
@@ -650,6 +657,14 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-3 {
@@ -676,6 +691,10 @@ video {
   width: 100%;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -686,6 +705,10 @@ video {
 
 .max-w-\[1920px\] {
   max-width: 1920px;
+}
+
+.max-w-\[250px\] {
+  max-width: 250px;
 }
 
 .max-w-\[320px\] {
@@ -725,15 +748,11 @@ video {
   max-width: 20rem;
 }
 
-.max-w-\[200px\] {
-  max-width: 200px;
-}
-
-.max-w-\[250px\] {
-  max-width: 250px;
-}
-
 .flex-grow {
+  flex-grow: 1;
+}
+
+.grow {
   flex-grow: 1;
 }
 
@@ -743,10 +762,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -759,10 +774,6 @@ video {
 
 .justify-start {
   justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -797,8 +808,8 @@ video {
   gap: 1.25rem;
 }
 
-.gap-y-6 {
-  row-gap: 1.5rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-hidden {
@@ -876,11 +887,6 @@ video {
   background-color: rgb(15 25 28 / var(--tw-bg-opacity));
 }
 
-.bg-eggshell {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 250 238 / var(--tw-bg-opacity));
-}
-
 .bg-light_blue {
   --tw-bg-opacity: 1;
   background-color: rgb(168 218 220 / var(--tw-bg-opacity));
@@ -889,6 +895,11 @@ video {
 .bg-pink {
   --tw-bg-opacity: 1;
   background-color: rgb(240 173 168 / var(--tw-bg-opacity));
+}
+
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 57 57 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -909,28 +920,36 @@ video {
 }
 
 .from-dark_blue {
-  --tw-gradient-from: #324571;
-  --tw-gradient-to: rgb(50 69 113 / 0);
+  --tw-gradient-from: #324571 var(--tw-gradient-from-position);
+  --tw-gradient-from-position:  ;
+  --tw-gradient-to: rgb(50 69 113 / 0)  var(--tw-gradient-from-position);
+  --tw-gradient-to-position:  ;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-red {
-  --tw-gradient-from: #EF3939;
-  --tw-gradient-to: rgb(239 57 57 / 0);
+  --tw-gradient-from: #EF3939 var(--tw-gradient-from-position);
+  --tw-gradient-from-position:  ;
+  --tw-gradient-to: rgb(239 57 57 / 0)  var(--tw-gradient-from-position);
+  --tw-gradient-to-position:  ;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .via-purple {
-  --tw-gradient-to: rgb(24 17 57 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #181139, var(--tw-gradient-to);
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to: rgb(24 17 57 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-to-position:  ;
+  --tw-gradient-stops: var(--tw-gradient-from), #181139 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .to-black {
-  --tw-gradient-to: #0F191C;
+  --tw-gradient-to: #0F191C var(--tw-gradient-to-position);
+  --tw-gradient-to-position:  ;
 }
 
 .to-purple {
-  --tw-gradient-to: #181139;
+  --tw-gradient-to: #181139 var(--tw-gradient-to-position);
+  --tw-gradient-to-position:  ;
 }
 
 .bg-\[length\:100\%_100\%\] {
@@ -960,16 +979,16 @@ video {
      object-position: center;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-2 {
@@ -997,11 +1016,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1024,6 +1038,10 @@ video {
   padding-bottom: 6rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
 }
@@ -1042,10 +1060,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
 }
 
 .text-2xl {
@@ -1156,12 +1170,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .brightness-\[110\%\] {
   --tw-brightness: brightness(110%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1183,10 +1191,12 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.delay-100 {
+  transition-delay: 100ms;
+}
+
+.delay-200 {
+  transition-delay: 200ms;
 }
 
 html {
@@ -1429,6 +1439,18 @@ pre i {
   perspective-origin: 50% 50%;
 }
 
+.bg-red {
+  background-color: red;
+}
+
+.bg-orange {
+  background-color: orange;
+}
+
+.bg-yellow {
+  background-color: yellow;
+}
+
 .hover\:bg-purple:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(24 17 57 / var(--tw-bg-opacity));
@@ -1438,23 +1460,9 @@ pre i {
   --tw-bg-opacity: 0.5;
 }
 
-.hover\:text-eggshell:hover {
-  --tw-text-opacity: 1;
-  color: rgb(241 250 238 / var(--tw-text-opacity));
-}
-
 .hover\:saturate-200:hover {
   --tw-saturate: saturate(2);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.disabled\:cursor-not-allowed:disabled {
-  cursor: not-allowed;
-}
-
-.disabled\:text-black:disabled {
-  --tw-text-opacity: 1;
-  color: rgb(15 25 28 / var(--tw-text-opacity));
 }
 
 .aria-\[current\]\:bg-purple[aria-current] {
@@ -1462,17 +1470,17 @@ pre i {
   background-color: rgb(24 17 57 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:border-eggshell {
+:is(.dark .dark\:border-eggshell) {
   --tw-border-opacity: 1;
   border-color: rgb(241 250 238 / var(--tw-border-opacity));
 }
 
-.dark .dark\:bg-black {
+:is(.dark .dark\:bg-black) {
   --tw-bg-opacity: 1;
   background-color: rgb(15 25 28 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:text-eggshell {
+:is(.dark .dark\:text-eggshell) {
   --tw-text-opacity: 1;
   color: rgb(241 250 238 / var(--tw-text-opacity));
 }
@@ -1498,6 +1506,10 @@ pre i {
 
   .md\:max-w-\[360px\] {
     max-width: 360px;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
   }
 
   .md\:gap-8 {
@@ -1559,12 +1571,20 @@ pre i {
     display: none;
   }
 
+  .lg\:max-w-\[35ch\] {
+    max-width: 35ch;
+  }
+
   .lg\:max-w-\[400px\] {
     max-width: 400px;
   }
 
   .lg\:max-w-\[40ch\] {
     max-width: 40ch;
+  }
+
+  .lg\:max-w-\[45ch\] {
+    max-width: 45ch;
   }
 
   .lg\:max-w-md {
@@ -1651,7 +1671,6 @@ pre i {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
-
 
 
 
