--- a/input.css
+++ b/input.css
@@ -2,6 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.alex-special,
+.alex-special-1,
+.alex-special-2 {
+  @apply relative;
+}
+
+.alex-special::after,
+.alex-special-1::after,
+.alex-special-2::after {
+  content: "";
+  animation: ping 0.5s cubic-bezier(0, 0, 0.2, 1) ;
+  @apply absolute inset-0 bg-white mix-blend-difference rounded-md py-2 px-1 z-10;
+  opacity: 0;
+}
+
+@keyframes ping {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.alex-special-1::after {
+  animation-delay: 500ms;
+}
+
+.alex-special-2::after {
+  animation-delay: 1000ms;
+}
+
 html {
   font-size: 22px;
   font-family: system-ui, Arial, Helvetica, sans-serif;
