--- a/style/output.css
+++ b/style/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -31,7 +31,6 @@
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
-6. Use the user's configured `sans` font-variation-settings by default.
 */
 
 html {
@@ -48,8 +47,6 @@ html {
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
-  font-variation-settings: normal;
-  /* 6 */
 }
 
 /*
@@ -548,10 +545,6 @@ video {
   top: 1rem;
 }
 
-.z-\[2\] {
-  z-index: 2;
-}
-
 .m-4 {
   margin: 1rem;
 }
@@ -564,11 +557,6 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .mb-0 {
@@ -587,10 +575,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -601,6 +585,14 @@ video {
 
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
 }
 
 .mt-1 {
@@ -615,10 +607,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -629,6 +617,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .block {
@@ -864,10 +856,6 @@ video {
   border-top-width: 1px;
 }
 
-.border-solid {
-  border-style: solid;
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(15 25 28 / var(--tw-border-opacity));
@@ -917,11 +905,6 @@ video {
   background-color: rgb(240 173 168 / var(--tw-bg-opacity));
 }
 
-.bg-red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 57 57 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(242 248 250 / var(--tw-bg-opacity));
@@ -939,50 +922,43 @@ video {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.from-\[\#181139\] {
-  --tw-gradient-from: #181139 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(24 17 57 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
+.from-dark_blue {
+  --tw-gradient-from: #324571;
+  --tw-gradient-to: rgb(50 69 113 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-dark_blue {
-  --tw-gradient-from: #324571 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(50 69 113 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
+.from-purple {
+  --tw-gradient-from: #181139;
+  --tw-gradient-to: rgb(24 17 57 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-red {
-  --tw-gradient-from: #EF3939 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(239 57 57 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-from: #EF3939;
+  --tw-gradient-to: rgb(239 57 57 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .via-purple {
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to: rgb(24 17 57 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
-  --tw-gradient-stops: var(--tw-gradient-from), #181139 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-\[\#324571\] {
-  --tw-gradient-to: #324571 var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: rgb(24 17 57 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #181139, var(--tw-gradient-to);
 }
 
 .to-black {
-  --tw-gradient-to: #0F191C var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: #0F191C;
+}
+
+.to-dark_blue {
+  --tw-gradient-to: #324571;
 }
 
 .to-purple {
-  --tw-gradient-to: #181139 var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: #181139;
+}
+
+.to-red {
+  --tw-gradient-to: #EF3939;
 }
 
 .bg-\[length\:100\%_100\%\] {
@@ -1028,6 +1004,10 @@ video {
   padding: 1rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1053,11 +1033,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1068,28 +1043,33 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pb-16 {
   padding-bottom: 4rem;
 }
 
-.pb-24 {
-  padding-bottom: 6rem;
-}
-
 .pb-3 {
   padding-bottom: 0.75rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
+.pl-0 {
+  padding-left: 0px;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
+.pl-6 {
+  padding-left: 1.5rem;
 }
 
 .pr-4 {
@@ -1163,10 +1143,6 @@ video {
   color: rgb(122 122 122 / var(--tw-text-opacity));
 }
 
-.text-\[\#F2F8FA70\] {
-  color: #F2F8FA70;
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(15 25 28 / var(--tw-text-opacity));
@@ -1189,6 +1165,14 @@ video {
 
 .text-opacity-20 {
   --tw-text-opacity: 0.2;
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .opacity-90 {
@@ -1229,8 +1213,8 @@ video {
   outline-style: solid;
 }
 
-.outline-4 {
-  outline-width: 4px;
+.outline-2 {
+  outline-width: 2px;
 }
 
 .brightness-\[110\%\] {
@@ -1254,12 +1238,57 @@ video {
   transition-duration: 150ms;
 }
 
-.delay-100 {
-  transition-delay: 100ms;
+.alex-special,
+.alex-special-1,
+.alex-special-2 {
+  position: relative;
 }
 
-.delay-200 {
-  transition-delay: 200ms;
+.alex-special::after,
+.alex-special-1::after,
+.alex-special-2::after {
+  content: "";
+  animation: ping 0.5s cubic-bezier(0, 0, 0.2, 1) ;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: 10;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 248 250 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  mix-blend-mode: difference;
+  opacity: 0;
+}
+
+@keyframes ping {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  25% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.alex-special-1::after {
+  animation-delay: 500ms;
+}
+
+.alex-special-2::after {
+  animation-delay: 1000ms;
 }
 
 html {
@@ -1523,6 +1552,10 @@ pre i {
   --tw-bg-opacity: 0.5;
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
 .hover\:saturate-200:hover {
   --tw-saturate: saturate(2);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1533,21 +1566,21 @@ pre i {
   background-color: rgb(24 17 57 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:border-eggshell) {
+.dark .dark\:border-eggshell {
   --tw-border-opacity: 1;
   border-color: rgb(241 250 238 / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:bg-black) {
+.dark .dark\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(15 25 28 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:stroke-eggshell) {
+.dark .dark\:stroke-eggshell {
   stroke: #F1FAEE;
 }
 
-:is(.dark .dark\:text-eggshell) {
+.dark .dark\:text-eggshell {
   --tw-text-opacity: 1;
   color: rgb(241 250 238 / var(--tw-text-opacity));
 }
@@ -1560,11 +1593,19 @@ pre i {
   .sm\:p-8 {
     padding: 2rem;
   }
+
+  .sm\:pb-24 {
+    padding-bottom: 6rem;
+  }
 }
 
 @media (min-width: 768px) {
-  .md\:mt-\[-60px\] {
-    margin-top: -60px;
+  .md\:mt-\[-70px\] {
+    margin-top: -70px;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .md\:block {
@@ -1621,14 +1662,21 @@ pre i {
     margin-right: auto;
   }
 
-  .lg\:my-12 {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  .lg\:my-32 {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
   }
 
-  .lg\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+  .lg\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .lg\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .lg\:mt-28 {
+    margin-top: 7rem;
   }
 
   .lg\:mt-\[-60px\] {
@@ -1639,12 +1687,12 @@ pre i {
     display: block;
   }
 
-  .lg\:hidden {
-    display: none;
+  .lg\:flex {
+    display: flex;
   }
 
-  .lg\:w-\[5rem\] {
-    width: 5rem;
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:max-w-\[35ch\] {
@@ -1675,10 +1723,6 @@ pre i {
     align-items: center;
   }
 
-  .lg\:justify-end {
-    justify-content: flex-end;
-  }
-
   .lg\:rounded-tr-lg {
     border-top-right-radius: 0.5rem;
   }
@@ -1689,11 +1733,6 @@ pre i {
 
   .lg\:bg-\[url\(\'\/images\/wave\.svg\'\)\] {
     background-image: url('/images/wave.svg');
-  }
-
-  .lg\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .lg\:pl-12 {
@@ -1738,6 +1777,12 @@ pre i {
 
   .xl\:gap-4 {
     gap: 1rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:ml-\[-100px\] {
+    margin-left: -100px;
   }
 }
 
