--- a/style/output.css
+++ b/style/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -31,7 +31,6 @@
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
-6. Use the user's configured `sans` font-variation-settings by default.
 */
 
 html {
@@ -48,8 +47,6 @@ html {
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
-  font-variation-settings: normal;
-  /* 6 */
 }
 
 /*
@@ -528,8 +525,8 @@ video {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
+.top-0 {
+  top: 0px;
 }
 
 .left-\[-15px\] {
@@ -540,12 +537,12 @@ video {
   right: 0px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .top-4 {
   top: 1rem;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .z-\[2\] {
@@ -571,16 +568,28 @@ video {
   margin-bottom: 2rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mb-2 {
@@ -591,44 +600,32 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .mb-auto {
   margin-bottom: auto;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-20 {
   margin-top: 5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .block {
@@ -651,36 +648,48 @@ video {
   height: 2.5rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-3 {
   height: 0.75rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-40 {
   height: 10rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-14 {
+  height: 3.5rem;
 }
 
 .h-6 {
   height: 1.5rem;
 }
 
-.h-full {
-  height: 100%;
+.w-full {
+  width: 100%;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-14 {
   width: 3.5rem;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-\[calc\(100\%\+25px\)\] {
+  width: calc(100% + 25px);
+}
+
+.w-\[90px\] {
+  width: 90px;
 }
 
 .w-6 {
@@ -691,48 +700,16 @@ video {
   width: 40%;
 }
 
-.w-\[90px\] {
-  width: 90px;
-}
-
-.w-\[calc\(100\%\+25px\)\] {
-  width: calc(100% + 25px);
-}
-
-.w-full {
-  width: 100%;
+.max-w-full {
+  max-width: 100%;
 }
 
 .max-w-4xl {
   max-width: 56rem;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
-}
-
-.max-w-\[1920px\] {
-  max-width: 1920px;
-}
-
 .max-w-\[250px\] {
   max-width: 250px;
-}
-
-.max-w-\[320px\] {
-  max-width: 320px;
-}
-
-.max-w-\[40ch\] {
-  max-width: 40ch;
-}
-
-.max-w-\[50ch\] {
-  max-width: 50ch;
-}
-
-.max-w-\[70ch\] {
-  max-width: 70ch;
 }
 
 .max-w-fit {
@@ -740,12 +717,28 @@ video {
   max-width: fit-content;
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
 .max-w-sm {
   max-width: 24rem;
+}
+
+.max-w-\[1920px\] {
+  max-width: 1920px;
+}
+
+.max-w-\[40ch\] {
+  max-width: 40ch;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-5xl {
+  max-width: 64rem;
+}
+
+.max-w-\[50ch\] {
+  max-width: 50ch;
 }
 
 .max-w-xl {
@@ -756,6 +749,10 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[70ch\] {
+  max-width: 70ch;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
@@ -764,12 +761,12 @@ video {
   flex-grow: 1;
 }
 
-.cursor-not-allowed {
-  cursor: not-allowed;
-}
-
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .flex-col {
@@ -796,28 +793,28 @@ video {
   justify-content: space-between;
 }
 
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-8 {
@@ -836,16 +833,16 @@ video {
   overflow-x: scroll;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .border {
@@ -887,9 +884,9 @@ video {
   background-color: rgb(11 8 26 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F3F4F6\] {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(242 248 250 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#dbdbdb\] {
@@ -902,9 +899,9 @@ video {
   background-color: rgb(210 215 180 / var(--tw-bg-opacity));
 }
 
-.bg-black {
+.bg-pink {
   --tw-bg-opacity: 1;
-  background-color: rgb(15 25 28 / var(--tw-bg-opacity));
+  background-color: rgb(240 173 168 / var(--tw-bg-opacity));
 }
 
 .bg-light_blue {
@@ -912,77 +909,66 @@ video {
   background-color: rgb(168 218 220 / var(--tw-bg-opacity));
 }
 
-.bg-pink {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 173 168 / var(--tw-bg-opacity));
-}
-
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(239 57 57 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(242 248 250 / var(--tw-bg-opacity));
+  background-color: rgb(15 25 28 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F3F4F6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\/images\/wave_small\.svg\'\)\] {
   background-image: url('/images/wave_small.svg');
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.from-\[\#181139\] {
-  --tw-gradient-from: #181139 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(24 17 57 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-dark_blue {
-  --tw-gradient-from: #324571 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(50 69 113 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
+.from-\[\#181139\] {
+  --tw-gradient-from: #181139;
+  --tw-gradient-to: rgb(24 17 57 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-red {
-  --tw-gradient-from: #EF3939 var(--tw-gradient-from-position);
-  --tw-gradient-from-position:  ;
-  --tw-gradient-to: rgb(239 57 57 / 0)  var(--tw-gradient-from-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-from: #EF3939;
+  --tw-gradient-to: rgb(239 57 57 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-dark_blue {
+  --tw-gradient-from: #324571;
+  --tw-gradient-to: rgb(50 69 113 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .via-purple {
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to: rgb(24 17 57 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
-  --tw-gradient-stops: var(--tw-gradient-from), #181139 var(--tw-gradient-via-position), var(--tw-gradient-to);
+  --tw-gradient-to: rgb(24 17 57 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #181139, var(--tw-gradient-to);
 }
 
 .to-\[\#324571\] {
-  --tw-gradient-to: #324571 var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: #324571;
 }
 
 .to-black {
-  --tw-gradient-to: #0F191C var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: #0F191C;
 }
 
 .to-purple {
-  --tw-gradient-to: #181139 var(--tw-gradient-to-position);
-  --tw-gradient-to-position:  ;
+  --tw-gradient-to: #181139;
 }
 
 .bg-\[length\:100\%_100\%\] {
@@ -1016,10 +1002,6 @@ video {
      object-position: center;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-3 {
   padding: 0.75rem;
 }
@@ -1028,9 +1010,8 @@ video {
   padding: 1rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-4 {
@@ -1038,14 +1019,9 @@ video {
   padding-right: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-2 {
@@ -1053,31 +1029,29 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
-.pb-24 {
-  padding-bottom: 6rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-3 {
@@ -1088,48 +1062,48 @@ video {
   padding-left: 1.5rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
 }
 
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-center {
+  text-align: center;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-\[14px\] {
   font-size: 14px;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1137,34 +1111,55 @@ video {
   line-height: 1.25rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-semibold {
   font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .tracking-tight {
   letter-spacing: -0.025em;
 }
 
-.text-\[\#7a7a7a\] {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(122 122 122 / var(--tw-text-opacity));
-}
-
-.text-\[\#F2F8FA70\] {
-  color: #F2F8FA70;
+  color: rgb(242 248 250 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1172,19 +1167,23 @@ video {
   color: rgb(15 25 28 / var(--tw-text-opacity));
 }
 
-.text-eggshell {
-  --tw-text-opacity: 1;
-  color: rgb(241 250 238 / var(--tw-text-opacity));
-}
-
 .text-purple {
   --tw-text-opacity: 1;
   color: rgb(24 17 57 / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-\[\#7a7a7a\] {
   --tw-text-opacity: 1;
-  color: rgb(242 248 250 / var(--tw-text-opacity));
+  color: rgb(122 122 122 / var(--tw-text-opacity));
+}
+
+.text-eggshell {
+  --tw-text-opacity: 1;
+  color: rgb(241 250 238 / var(--tw-text-opacity));
+}
+
+.text-\[\#F2F8FA70\] {
+  color: #F2F8FA70;
 }
 
 .text-opacity-20 {
@@ -1207,12 +1206,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-\[3px_3px_0px_\#0d0b29\] {
-  --tw-shadow: 3px 3px 0px #0d0b29;
-  --tw-shadow-colored: 3px 3px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-\[3px_3px_0px_\#5e7a7b50\] {
   --tw-shadow: 3px 3px 0px #5e7a7b50;
   --tw-shadow-colored: 3px 3px 0px var(--tw-shadow-color);
@@ -1221,6 +1214,12 @@ video {
 
 .shadow-\[3px_3px_0px_\#7e816e50\] {
   --tw-shadow: 3px 3px 0px #7e816e50;
+  --tw-shadow-colored: 3px 3px 0px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[3px_3px_0px_\#0d0b29\] {
+  --tw-shadow: 3px 3px 0px #0d0b29;
   --tw-shadow-colored: 3px 3px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -1533,21 +1532,21 @@ pre i {
   background-color: rgb(24 17 57 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:border-eggshell) {
+.dark .dark\:border-eggshell {
   --tw-border-opacity: 1;
   border-color: rgb(241 250 238 / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:bg-black) {
+.dark .dark\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(15 25 28 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:stroke-eggshell) {
+.dark .dark\:stroke-eggshell {
   stroke: #F1FAEE;
 }
 
-:is(.dark .dark\:text-eggshell) {
+.dark .dark\:text-eggshell {
   --tw-text-opacity: 1;
   color: rgb(241 250 238 / var(--tw-text-opacity));
 }
@@ -1575,12 +1574,12 @@ pre i {
     max-width: 360px;
   }
 
-  .md\:gap-12 {
-    gap: 3rem;
-  }
-
   .md\:gap-8 {
     gap: 2rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
   }
 
   .md\:p-6 {
@@ -1604,18 +1603,23 @@ pre i {
     padding-top: 1rem;
   }
 
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1624,11 +1628,6 @@ pre i {
   .lg\:my-12 {
     margin-top: 3rem;
     margin-bottom: 3rem;
-  }
-
-  .lg\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
   }
 
   .lg\:mt-\[-60px\] {
@@ -1647,24 +1646,24 @@ pre i {
     width: 5rem;
   }
 
-  .lg\:max-w-\[35ch\] {
-    max-width: 35ch;
+  .lg\:max-w-md {
+    max-width: 28rem;
   }
 
   .lg\:max-w-\[400px\] {
     max-width: 400px;
   }
 
-  .lg\:max-w-\[40ch\] {
-    max-width: 40ch;
-  }
-
   .lg\:max-w-\[45ch\] {
     max-width: 45ch;
   }
 
-  .lg\:max-w-md {
-    max-width: 28rem;
+  .lg\:max-w-\[35ch\] {
+    max-width: 35ch;
+  }
+
+  .lg\:max-w-\[40ch\] {
+    max-width: 40ch;
   }
 
   .lg\:flex-row {
@@ -1704,21 +1703,20 @@ pre i {
     padding-right: 2rem;
   }
 
-  .lg\:pt-12 {
-    padding-top: 3rem;
-  }
-
   .lg\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .lg\:pt-12 {
+    padding-top: 3rem;
   }
 
   .lg\:text-center {
     text-align: center;
   }
 
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-\[16px\] {
+    font-size: 16px;
   }
 
   .lg\:text-5xl {
@@ -1726,8 +1724,9 @@ pre i {
     line-height: 1;
   }
 
-  .lg\:text-\[16px\] {
-    font-size: 16px;
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1742,12 +1741,12 @@ pre i {
 }
 
 @media (min-width: 1920px) {
-  .\34xl\:left-0 {
-    left: 0px;
-  }
-
   .\34xl\:top-\[-10px\] {
     top: -10px;
+  }
+
+  .\34xl\:left-0 {
+    left: 0px;
   }
 
   .\34xl\:rounded-md {
