--- a/style/output.css
+++ b/style/output.css
@@ -579,6 +579,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -593,10 +597,6 @@ video {
 
 .mt-12 {
   margin-top: 3rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mb-0 {
@@ -669,6 +669,10 @@ video {
 
 .h-\[38px\] {
   height: 38px;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .w-full {
@@ -836,6 +840,10 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -864,6 +872,15 @@ video {
 .border-purple {
   --tw-border-opacity: 1;
   border-color: rgb(24 17 57 / var(--tw-border-opacity));
+}
+
+.border-red {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 57 57 / var(--tw-border-opacity));
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .border-opacity-30 {
@@ -1209,59 +1226,6 @@ video {
   transition-duration: 150ms;
 }
 
-.code-example-ping,
-.code-example-ping-1,
-.code-example-ping-2 {
-  position: relative;
-}
-
-.code-example-ping::after,
-.code-example-ping-1::after,
-.code-example-ping-2::after {
-  content: "";
-  animation: ping 0.25s cubic-bezier(0, 0, 0.2, 1) ;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  z-index: 10;
-  border-radius: 0.375rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 248 250 / var(--tw-bg-opacity));
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-  mix-blend-mode: difference;
-  opacity: 0;
-}
-
-@keyframes ping {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-
-  25% {
-    transform: scale(1);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.code-example-ping-1::after {
-  animation-delay: 250ms;
-}
-
-.code-example-ping-2::after {
-  animation-delay: 500ms;
-}
-
 html {
   font-size: 22px;
   font-family: system-ui, Arial, Helvetica, sans-serif;
@@ -1500,18 +1464,6 @@ pre i {
   -ms-perspective-origin: 50% 50%;
   -o-perspective-origin: 50% 50%;
   perspective-origin: 50% 50%;
-}
-
-.bg-red {
-  background-color: red;
-}
-
-.bg-orange {
-  background-color: orange;
-}
-
-.bg-yellow {
-  background-color: yellow;
 }
 
 .hover\:bg-purple:hover {
@@ -1783,8 +1735,4 @@ pre i {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
-
-
-
-
 
